--- a/package.json
+++ b/package.json
@@ -17,8 +17,17 @@
   "dependencies": {
     "@floating-ui/dom": "^1.7.1",
     "highlight.js": "^11.11.1",
-    "marked": "^15.0.12",
-    "marked-highlight": "^2.2.1"
+    "katex": "^0.16.22",
+    "rehype-format": "^5.0.1",
+    "rehype-highlight": "^7.0.2",
+    "rehype-katex": "^7.0.1",
+    "rehype-mermaid": "^3.0.0",
+    "rehype-stringify": "^10.0.1",
+    "remark": "^15.0.1",
+    "remark-gfm": "^4.0.1",
+    "remark-math": "^6.0.0",
+    "remark-rehype": "^11.1.2",
+    "unified": "^11.0.5"
   },
   "devDependencies": {
     "vite": "^6.3.5"
