--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "balanced-match": "^3.0.1",
     "highlight.js": "^11.11.1",
     "katex": "^0.16.22",
+    "rehype-callouts": "^2.1.1",
     "rehype-format": "^5.0.1",
     "rehype-highlight": "^7.0.2",
     "rehype-katex": "^7.0.1",
@@ -26,6 +27,7 @@
     "rehype-parse": "^9.0.1",
     "rehype-raw": "^7.0.0",
     "rehype-stringify": "^10.0.1",
+    "rehype-video": "^2.3.0",
     "remark": "^15.0.1",
     "remark-gfm": "^4.0.1",
     "remark-math": "^6.0.0",
