--- a/package.json
+++ b/package.json
@@ -17,12 +17,15 @@
   "dependencies": {
     "@floating-ui/dom": "^1.7.1",
     "balanced-match": "^3.0.1",
+    "hast-util-to-dom": "^4.0.1",
     "highlight.js": "^11.11.1",
     "katex": "^0.16.22",
+    "property-information": "^7.1.0",
     "rehype-callouts": "^2.1.1",
     "rehype-format": "^5.0.1",
     "rehype-highlight": "^7.0.2",
     "rehype-katex": "^7.0.1",
+    "rehype-mathjax": "^7.1.0",
     "rehype-mermaid": "^3.0.0",
     "rehype-parse": "^9.0.1",
     "rehype-raw": "^7.0.0",
